--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "scripts": {
     "start": "node index.js",
+    "build": "npm install && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
